Fix for ribbon expand/collapse button falling outside the ISE window when the ribbon is collapsed.

--- a/src/Spe/sitecore modules/PowerShell/Styles/ise.css
+++ b/src/Spe/sitecore modules/PowerShell/Styles/ise.css
@@ -567,3 +567,7 @@ nobr > .scTab_Hover {
 .scEditorWarningHidden {
     display: none;
 }
+
+.scRibbonOpen {
+    bottom: -22px;
+}
